@@ -2,6 +2,8 @@
 0.0.92
 ========================
 
+- updated Tangular template engine
+
 ========================
 0.0.91
 ========================
